@@ -1,5 +1,9 @@
 2011-03-05 S. Thiell <stephane.thiell@cea.fr>
 
+	* NodeSet.py: Internal changes to use slice type to represent ranges in
+	RangeSet. Changed RangeSet.add_range() 'stop' argument semantic, it is now
+	conforming to range()'s one.
+
 	* NodeSet.py: Fix issue with in-place operators returning None. Added
 	tests.
 
